	* Vladimir Oleynik, Matt Kraai, Erik Andersen
	    -- several nasty bugs in ash and msh.  msh could not assign
		any variables and had debug code still enabled.  ash
		had several compile errors (depending on selected options)
		and variable assignment problems as well.

    New Applets:
	* David McCullough <davidm@lineo.com> -- modprobe
	* Vladimir Oleynik -- traceroute

    New Scripts:
	* David Schleef, Erik Andersen, Stuart Hughes -- depmod.pl
	    This is a replacement for the depmod program from the modutils 
	    package, but is fully cross platform and is designed to run on 
	    your host system (not on the target).

    Other Changes:
	* Erik Andersen 
	    -- various little things
	    -- fixed busybox.spec so it should now work on redhat systems
	    -- fixed dos2unix and unix2dos so they should work once again
	    -- Adjustments to make busybox more uClinux friendly.  Busybox
		should now work on uClinux systems without needing and source
		code changes (applets that won't work on uClinux systems are 
		now automagicaly disabled).
	* Jim Gleason <jimg@lineo.com>
	    -- Fixed for sed, where it failed to preserve whether or not the 
		line was previously altered when running a subst command.
	* Matt Kraai 
	    -- Made tar read 20 512byte blocks at a time (like GNU tar)
	    -- Allow msh.c assignments with the export and readonly commands.
	    -- Added BB_FEATURE_DEVFS to enable devfs device names.
	    -- Better devfs support
	    -- Don't save/restore vi readonly flag if vi is compiled read-only.
	    -- Reworked rdate option handling (is now smaller).
	    -- Size reduction in ping
	* Aaron Lehmann 
	    -- slimmed down md5sum 
	    -- contributed a nice new (hand written, not lex/yacc) Posix math 
		support for ash, which is once again a full posix shell.
	* Felix von Leitner <leitner@convergence.de> -- patches to make busybox 
	    work with dietlibc.
	* David McCullough
	    -- Adjustments to make busybox more uClinux friendly
	* Glenn McGrath 